--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.8.1,<3.9.7 || >3.9.7,<3.12"
+python = ">=3.9.0,<3.9.7 || >3.9.7,<3.12"
 streamlit = "^1.35.0"
 llama-index = "^0.10.45"
 llama-hub = "^0.0.79.post1"
@@ -18,6 +18,10 @@ streamlit-pills = "^0.3.0"
 chromadb = "^0.5.0"
 llama-index-vector-stores-chroma = "^0.1.9"
 llama-index-readers-web = "^0.1.18"
+langchain = "^0.2.5"
+langchain-openai = "^0.1.8"
+langchain-community = "^0.2.5"
+langgraph = "^0.0.69"
 
 
 [build-system]
